[gd_scene load_steps=33 format=2]

[ext_resource path="res://pieces/hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://fsm/fsm.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/bouncer.png" type="Texture" id=3]
[ext_resource path="res://entities/enemies/bouncer.gd" type="Script" id=4]
[ext_resource path="res://fsm/states/bouncer_boing.gd" type="Script" id=5]
[ext_resource path="res://fsm/states/bouncer_rapier_dive.gd" type="Script" id=6]
[ext_resource path="res://fsm/states/random_proceed.gd" type="Script" id=7]
[ext_resource path="res://fsm/states/bouncer_rapier_jump.gd" type="Script" id=8]
[ext_resource path="res://entities/enemies/bouncer_dangersword.png" type="Texture" id=9]
[ext_resource path="res://pieces/auto_sprite.tscn" type="PackedScene" id=10]
[ext_resource path="res://fsm/states/state.gd" type="Script" id=11]
[ext_resource path="res://fsm/states/bouncer_dive_dive.gd" type="Script" id=12]
[ext_resource path="res://fsm/states/bouncer_prelude.gd" type="Script" id=13]
[ext_resource path="res://pieces/entity_detector.tscn" type="PackedScene" id=14]
[ext_resource path="res://entities/enemies/data/bouncer.tres" type="Resource" id=15]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 10, 1 )

[sub_resource type="CircleShape2D" id=19]
radius = 7.0

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 128, 64 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "attacc0"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=7]
resource_name = "boing"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=14]
resource_name = "dive"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=15]
resource_name = "dive_pause"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=17]
resource_name = "divedive"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=12]
resource_name = "giga_idle"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=10]
resource_name = "postattacc0"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=18]
resource_name = "predive"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=20]
resource_name = "prelude"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=13]
resource_name = "spin"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="GDScript" id=11]
script/source = "extends State



"

[node name="bouncer" type="KinematicBody2D"]
script = ExtResource( 4 )
flip_path = NodePath("flippable")
title = "The Bouncer"
max_hp = 18.0
saving_enabled = false
boss_theme = "entrydenied"
enemy_data = ExtResource( 15 )

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 6 )

[node name="flippable" type="Node2D" parent="."]
use_parent_material = true

[node name="sprite" type="Sprite" parent="flippable"]
use_parent_material = true
position = Vector2( 0, -16 )
texture = ExtResource( 3 )
hframes = 8
vframes = 7

[node name="hurtbox0" parent="flippable" instance=ExtResource( 1 )]

[node name="hitbox" type="CollisionPolygon2D" parent="flippable/hurtbox0"]
visible = false
polygon = PoolVector2Array( -16, -24, -8, -32, 8, -32, 16, -24, 24, -16, 24, 0, 8, -8, 8, -16, 0, -24 )

[node name="dangersword" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -8 )

[node name="auto_sprite" parent="dangersword" instance=ExtResource( 10 )]
position = Vector2( 16, 0 )
texture = ExtResource( 9 )
hframes = 4

[node name="hurtbox" parent="dangersword" instance=ExtResource( 1 )]
position = Vector2( 16, 0 )

[node name="hitbox" type="CollisionShape2D" parent="dangersword/hurtbox"]
position = Vector2( 4, 0 )
shape = SubResource( 16 )

[node name="underfoot" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 0, 8 )

[node name="hitbox" type="CollisionShape2D" parent="underfoot"]
shape = SubResource( 19 )

[node name="entity_detector" parent="." instance=ExtResource( 14 )]

[node name="hitbox" type="CollisionShape2D" parent="entity_detector"]
visible = false
shape = SubResource( 21 )

[node name="animator" type="AnimationPlayer" parent="."]
autoplay = "prelude"
anims/RESET = SubResource( 1 )
anims/attacc0 = SubResource( 9 )
anims/boing = SubResource( 7 )
anims/dive = SubResource( 14 )
anims/dive_pause = SubResource( 15 )
anims/divedive = SubResource( 17 )
anims/giga_idle = SubResource( 12 )
anims/idle = SubResource( 8 )
anims/postattacc0 = SubResource( 10 )
anims/predive = SubResource( 18 )
anims/prelude = SubResource( 20 )
anims/spin = SubResource( 13 )

[node name="fsm" type="Node" parent="."]
script = ExtResource( 2 )
animator_path = NodePath("../animator")

[node name="prelude" type="Node" parent="fsm"]
script = ExtResource( 13 )

[node name="idle" type="Node" parent="fsm"]
script = ExtResource( 7 )
animation = "idle"
options = [ "boing", "attacc0", "rapier_prejump" ]
weights = [ 1.0, 1.0, 1.0 ]

[node name="postattacc0" type="Node" parent="fsm"]
script = SubResource( 11 )
animation = "postattacc0"
auto_proceed = "boing"

[node name="rapier_prejump" type="Node" parent="fsm"]
script = ExtResource( 11 )
animation = "giga_idle"
auto_proceed = "rapier_jump"

[node name="dive_prejump" type="Node" parent="fsm"]
script = ExtResource( 11 )
animation = "giga_idle"
auto_proceed = "dive_jump"

[node name="boing" type="Node" parent="fsm"]
script = ExtResource( 5 )
animation = "boing"
auto_proceed = "idle"

[node name="attacc0" type="Node" parent="fsm"]
script = ExtResource( 5 )
animation = "attacc0"
auto_proceed = "postattacc0"
force = Vector2( 200, -200 )

[node name="rapier_jump" type="Node" parent="fsm"]
script = ExtResource( 8 )
animation = "spin"
auto_proceed = "rapier_dive"
force = Vector2( 100, -400 )

[node name="dive_jump" type="Node" parent="fsm"]
script = ExtResource( 8 )
animation = "boing"
auto_proceed = "dive_dive"
force = Vector2( 100, -400 )

[node name="big_jump" type="Node" parent="fsm"]
script = ExtResource( 5 )
animation = "spin"
auto_proceed = "boing"
force = Vector2( 100, -350 )

[node name="rapier_dive" type="Node" parent="fsm"]
script = ExtResource( 6 )
animation = "dive_pause"
auto_proceed = "boing"
recover_animation = "dive"

[node name="dive_dive" type="Node" parent="fsm"]
script = ExtResource( 12 )
animation = "predive"
auto_proceed = "dive_recover"
recover_animation = "divedive"

[node name="dive_recover" type="Node" parent="fsm"]
script = ExtResource( 11 )
animation = "giga_idle"
auto_proceed = "idle"

[connection signal="activated" from="entity_detector" to="fsm/prelude" method="activate"]
[connection signal="entered" from="fsm/idle" to="." method="_on_idle_entered"]
[connection signal="entered" from="fsm/postattacc0" to="." method="_on_postattacc0_entered"]
[connection signal="entered" from="fsm/boing" to="." method="_on_boing_entered"]
[connection signal="entered" from="fsm/attacc0" to="." method="_on_attacc0_entered"]
[connection signal="entered" from="fsm/rapier_jump" to="." method="_on_rapier_jump_entered"]
[connection signal="entered" from="fsm/dive_jump" to="." method="_on_dive_jump_entered"]
[connection signal="exited" from="fsm/big_jump" to="." method="_on_big_jump_exited"]
[connection signal="activated" from="fsm/rapier_dive" to="." method="_on_rapier_dive_activated"]
[connection signal="entered" from="fsm/rapier_dive" to="." method="_on_rapier_dive_entered"]
[connection signal="exited" from="fsm/rapier_dive" to="." method="_on_rapier_dive_exited"]
[connection signal="exited" from="fsm/dive_dive" to="." method="_on_dive_dive_exited"]
